--- a/client/components/Settings/Schedule/Reminders/styles.scss
+++ b/client/components/Settings/Schedule/Reminders/styles.scss
@@ -22,6 +22,7 @@
   min-height: 80px;
   display: flex;
   justify-content: space-between;
+  padding-left: 5px;
 }
 
 .edit {
